k8s/1.5/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: multitool-back
        image: praqma/network-multitool
        ports:
        - containerPort: 1180
