k8s/1.5/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 1180
